# marshalparser

./: .gitignore  .travis.yml  LICENSE  README.md  bits.py  examples_generator.py  marshal_content_check.py  marshalparser.py  pyproject.toml  setup.cfg  test.py  tox.ini  types.py
.github/workflows/: main.yml
marshalparser/: __init__.py  __main__.py  bits.py  magic.py  marshalparser.py  object_types.py
stats/: analysis.ipynb  types.csv
test/python/: test_module.py
