[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "test.py",
]

[tool.black]
line-length = 79
target-version = ['py36', 'py37', 'py38']
# Everything else is ignored via .gitignore
extend-exclude = '''
/(
    \.git
  | test/renamed_pycs
)/
'''
