[metadata]
name = marshalparser
version = attr:marshalparser.__version__
description = Parser for byte-cache .pyc files
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/fedora-python/marshalparser/
author = Lumír Balhar
author_email = frenzy.madness@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Compilers

[options]
packages =
    marshalparser
install_requires =
    dataclasses; python_version < "3.7"

[options.entry_points]
console_scripts =
    marshalparser = marshalparser.marshalparser:main

[options.extras_require]
test = pytest>=6
